# myapi_test

./: .gitignore  .travis.yml  README.md  pyproject.toml
mytest_api/: api.py  httpbin.py  load_json.py  parse_html.py  report.py  send_mail.py
report/: report.html
tests/: conftest.py  test_core.py
