[tool.poetry]
name = "myapi_test"
version = "0.1.0"
description = ""
authors = ["genejiang2012 <genejiang2012@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.1.2"
requests = "^2.25.0"
pytest-html = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
